syntax = "proto3";

package protoLibrary;

option go_package = "./protoLibrary";

service AuthService {
  rpc Register(RegisterRequest) returns (RegisterResponse) {}
  rpc Login(LoginRequest) returns (LoginResponse) {}
  rpc Validate(ValidateRequest) returns (ValidateResponse) {}
}

message User {
  int64 userID = 1;
  string username = 2;
  
  string email = 3;
  string password = 4;
  // Think it would be better to register one role since
  // all roles simply add more functionality than the previous
  string role = 5;
  // repeated string roles = 5;
}

// Register

message RegisterRequest {
  string username = 1;
  string email = 2;
  string password = 3;

  // Not yet implemented
  string role = 4;

}

message RegisterResponse {
  int64 status = 1;
  string error = 2;
}

// Login

message LoginRequest {
  string username = 1;
  string password = 2;
}

message LoginResponse {
  int64 status = 1;
  string error = 2;
  string token = 3;
}

// Validate

message ValidateRequest { string token = 1; }

message ValidateResponse {
  int64 status = 1;
  string error = 2;
  int64 userId = 3;
}

// TO DO: add logout requests